add_subdirectory(buttons)
add_subdirectory(sliders)
add_subdirectory(switches)
add_subdirectory(textinputs)
add_subdirectory(indicators)
add_subdirectory(animations)
add_subdirectory(popups)
add_subdirectory(lists)
add_subdirectory(canvas)
add_subdirectory(layouts)
add_subdirectory(transforms)
add_subdirectory(particles)
add_subdirectory(graphs)
add_subdirectory(pfd)
