add_subdirectory(buttons)
add_subdirectory(sliders)
add_subdirectory(switches)
add_subdirectory(textinputs)
add_subdirectory(indicators)
add_subdirectory(animations)
add_subdirectory(popups)
add_subdirectory(lists)
add_subdirectory(canvas)
add_subdirectory(layouts)
add_subdirectory(transforms)
add_subdirectory(particles)
add_subdirectory(graphs)
add_subdirectory(pfd)
add_subdirectory(hud)
add_subdirectory(websocket)
add_subdirectory(ecam)
add_subdirectory(navdisplay)
add_subdirectory(theorycpp)
add_subdirectory(date)
add_subdirectory(aircraftmap)
add_subdirectory(shapes)
add_subdirectory(maps)
add_subdirectory(pdfreader)
add_subdirectory(threads)
add_subdirectory(tableview)
add_subdirectory(treeview)
